[tool.poetry]
name = "genetic-algorithm"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]
black = "21.12b0"
mypy = "0.910"
pylint = "2.12.2"
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
